--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <p class="item-subhead">55 Places</p>
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">lashkar</p>
+                    <p class="item-head">Lashkar</p>
                     <p class="item-subhead">108 Places</p>
                 </div>
                 <div class="section-2-item">
